--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,24 @@
-.graphs-container {
+.header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 1vw;
+  align-items: center;
+  justify-content: left;
 
-  width: 50%;
+  padding: 1vw;
 }
+
+.graphs-container-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  margin-top: 2vw;
+}
+
+.graphs-container-center {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
